tests/snapshots/run_wpt_conformance__coreml_where_float16_0D_scalars.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where float16 0D scalars, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type select: Param 'cond' has incorrect type for operator 'select'. Expected { [...]>, tensor<bool }; got tensor<uint8, [1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputCondition: u8[];
    inputFalseValue: f16[];
    inputTrueValue: f16[];
  }

  nodes {
    [whereOutput] = where(inputCondition, inputTrueValue, inputFalseValue, label="");
  }

  outputs { whereOutput; }
}
